# Blur-Anything

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  app.py  pyproject.toml  requirements.txt  track_anything.py
.github/workflows/: main.yml
tracker/: base_tracker.py
tracker/model/: network.py  trainer.py
utils/: base_segmenter.py  blur.py  interact_tools.py  painter.py
