[tool.poetry]
name = "Blur-Anything"
version = "0.1.0"
description = "Track and blur any object or person in a video."
authors = ["Y-T-G <yaseensinbox@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "blur_anything"}]

[tool.poetry.dependencies]
python = "^3.9"
gradio = "^3.28.1"
numpy = "^1.24.3"
av = "^10.0.0"
torch = "^2.0.0"
opencv-python = "^4.7.0.72"
psutil = "^5.9.5"
tqdm = "^4.65.0"
matplotlib = "^3.7.1"
segment-anything = {git = "https://github.com/facebookresearch/segment-anything.git"}
torchvision = "^0.15.1"
pims = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
